# mod_fcgid

./: CHANGES-FCGID  NOTICE-FCGID  README-FCGID  README.md  STATUS-FCGID
docs/manual/mod/: mod_fcgid.html.en  mod_fcgid.xml
modules/fcgid/: CMakeLists.txt  fcgid_bridge.c  fcgid_bucket.c  fcgid_conf.c  fcgid_conf.h  fcgid_filter.c  fcgid_pm.h  fcgid_pm_main.c  fcgid_pm_unix.c  fcgid_pm_win.c  fcgid_proc_unix.c  fcgid_proc_win.c  fcgid_protocol.c  mod_fcgid.c
